# ATree

./: .audit.md  .checkpoint.json  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_RUTHLESS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY_AUDIT.md  analysis_report.md  crush.json
.atree/: index.sqlite
.github/workflows/: atree-index.yml  ci.yml
atree-cli/: Cargo.toml
atree-cli/src/: main.rs
atree-engine/: Cargo.toml
atree-engine/src/: architecture.rs  data_flow.rs  evidence.rs  evidence_bundle.rs  evidence_path.rs  lib.rs  mcp.rs  perf.rs
atree-engine/src/.atree/: index.sqlite
atree-engine/src/community/: mod.rs
atree-engine/src/constraints/: mod.rs
atree-engine/src/embeddings/: mod.rs
atree-engine/src/evidence/: calibration.rs  extraction.rs  lifecycle.rs  mod.rs  storage.rs
atree-engine/src/git_history/: mod.rs
atree-engine/src/graph/: knowledge.rs  mod.rs
atree-engine/src/lang/: bash.rs  c.rs  cpp.rs  csharp.rs  dart.rs  go.rs  java.rs  json.rs  kotlin.rs  mod.rs  php.rs  rust.rs  typescript.rs  yaml.rs
atree-engine/src/patterns/: mod.rs
atree-engine/src/pipeline/: mod.rs  phases.rs
atree-engine/src/process/: mod.rs
atree-engine/src/resolver/: c3.rs  import_graph.rs  import_resolver.rs  mod.rs
atree-engine/src/routes/: mod.rs
atree-engine/src/scope_resolution/: compound_receiver.rs  free_call.rs  graph_bridge.rs  mod.rs  namespace_targets.rs  orchestrator.rs  overload_narrowing.rs  receiver_bound.rs  reconcile_ownership.rs  reference_resolver.rs  walkers.rs  workspace_index.rs
atree-engine/src/search/: mod.rs
atree-engine/src/semantic/: cobol.rs  evidence.rs  markdown.rs  mod.rs  orm.rs  reference_index.rs  registries.rs
atree-engine/src/store/: mod.rs
atree-engine/src/syntax/: mod.rs
atree-engine/src/type_env/: mod.rs
atree-engine/tests/: evidence_golden.rs  evidence_tests.rs  golden_fixtures.rs
atree-web/: Cargo.toml
atree-web/src/: events.rs  layout.rs  lib.rs  main.rs  server.rs
atree-web/static/: index.html
atree-web/tests/: web_integration.rs
docs/: conversion-tracking.md  performance-audit.md  schema.json
scripts/: benchmark.sh  build_release.sh
src/: lib.rs  main.rs
src/community/: mod.rs
src/graph/: mod.rs
src/lang/: bash.rs  c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  json.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs  yaml.rs
src/process/: mod.rs
src/resolver/: c3.rs  import_resolver.rs  mod.rs
src/routes/: mod.rs
src/scope_resolution/: free_call.rs  graph_bridge.rs  mod.rs  orchestrator.rs  overload_narrowing.rs  receiver_bound.rs  walkers.rs
src/search/: mod.rs
src/semantic/: mod.rs
src/store/: mod.rs
src/syntax/: mod.rs
src/type_env/: mod.rs
tests/: golden_fixtures.rs
tests/fixtures/bash/: deploy.sh
tests/fixtures/c/: types.c
tests/fixtures/cpp/: service.cpp
tests/fixtures/csharp/: Service.cs
tests/fixtures/dart/: service.dart
tests/fixtures/go/: service.go
tests/fixtures/java/: Service.java
tests/fixtures/javascript/: service.js
tests/fixtures/json/: config.json
tests/fixtures/kotlin/: Service.kt
tests/fixtures/php/: Controller.php
tests/fixtures/python/: models.py
tests/fixtures/ruby/: service.rb
tests/fixtures/rust/: service.rs
tests/fixtures/swift/: Service.swift
tests/fixtures/tsx/: Component.tsx
tests/fixtures/typescript/: routes.ts
tests/fixtures/yaml/: config.yaml
