[package]
name = "file_system_a_star"
version = "0.6.0-alpha"
edition = "2021"
description = "Production-grade parallel filesystem analysis and A* pathfinder. Lock-free work-stealing scan, JSON output for inter-process integration, used in AI-agent indexing and large-scale auditing."
authors = [
    "UnityAILab <contact@unityailab.com>",
    "Sponge <sponge@unityailab.com>",
    "Alfreddo",
    "Gee",
    "Red",
]
license = "MIT"
readme = "README.md"

[dependencies]
mimalloc = { version = "0.1", default-features = false }
rustc-hash = "2"
crossbeam-deque = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "file_system_a_star"
path = "src/lib.rs"

[[bin]]
name = "file_system_a_star"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
