[package]
name = "atree-web"
description = "Web UI server for ATree — visual code graph with real-time agent query focus. Pure Rust server, lightweight Canvas frontend."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
atree-engine = { path = "../atree-engine", features = ["mcp"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
crossbeam-deque = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

[features]
default = []
